--- a/meetup/members/16/5704x3.md
+++ b/meetup/members/16/5704x3.md
@@ -9,11 +9,11 @@
 
 # 自己紹介
 
-主にインフラエンジニアとして活動しています。守備範囲はインフラ（物理）、サーバ、ネットワークなど。Railsでインフラを動かしたいと思っているので、RubyとRailsを勉強しています。あと、開発プロセスやセキュリティ周りも最近は活動範囲に取り入れています。
+主にインフラエンジニアとして活動しています。守備範囲はファシリティ、サーバ、ネットワークなど。Railsでインフラを動かしたいと思っているので、RubyとRailsを勉強しています。あと、開発プロセスやセキュリティ周りも最近は活動範囲に取り入れています。
 
-# piyopiyo.rb♯16でやりたいこと
+# piyopiyo.rb 16thでやりたいこと
 
-- nitrous.io ＋ Railsの教科書を読み進めてみる
+- nitrous.ioを使ってRailsの教科書を読み進めていこうと思います。
 
 # 最近気になる事
 
